--- a/roles/database/tasks/restore.yml
+++ b/roles/database/tasks/restore.yml
@@ -1,17 +1,9 @@
-# roles/mariadb/tasks/users.yml
 ---
-
-#- name: Download chembl_23 database dump
-#  get_url:
-#    url: ftp://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBLdb/latest/chembl_23_mysql.tar.gz
-#    dest: /tmp/chembl_23_mysql.tar.gz
-#    force: yes
-
-#- name: unzip the dump file
-#  unarchive:
-#    src: ftp://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBLdb/latest/chembl_23_mysql.tar.gz
-#    dest: /tmp
-#    remote_src: yes
+- name: unzip the dump file
+  unarchive:
+    src: ftp://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBLdb/latest/chembl_23_mysql.tar.gz
+    dest: /tmp
+    remote_src: yes
 
 - mysql_db:
     name: chembl_23
